--- a/marketplace.bz/inc/css/NavBar.css
+++ b/marketplace.bz/inc/css/NavBar.css
@@ -9,6 +9,19 @@
     padding-left: 0;
 }
 .form-control-underlined:focus {
-    border-bottom: 1px solid #4285F4;
-    box-shadow: 0 1px 0 0 #4285F4;
+    border-bottom: 1px solid #008CD8;
+    box-shadow: 0 1px 0 0 #008CD8;
+}
+
+.nav-item:hover .nav-link:hover{
+    color: #008CD8;
+}
+
+.nav-link:active .nav-item:active{
+    color: #008CD8;
+}
+
+.navbar-bottom-border{
+    border-bottom: 1px solid #008CD8;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
